<resources>
    <string name="app_name">Popular movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_single_movie">Movie</string>
    <string name="action_reviews">Reviews</string>
    <string name="json_author" translatable="false">author</string>
    <string name="json_content" translatable="false">content</string>
    <string name="reviews" translatable="false">/reviews</string>
    <string name="videos" translatable="false">/videos</string>
    <string name="action_single_movie_review">Movie Reviews</string>
    <string name="pref_sort_label_popular">Popular</string>
    <string name="pref_sort_label_topRated">Top Rated</string>
    <string name="pref_sort_label_favorites">Favorites</string>
    <string name="pref_sort_label_overview">Overview:</string>
    <string name="pref_sort_label_rating">Rating:</string>
    <string name="pref_sort_label_title">Title:</string>
    <string name="pref_sort_label_release_date">Release date:</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="video_key" translatable="false">key</string>
    <string name="video_name" translatable="false">name</string>
    <string name="name" >Video name</string>
    <string name="pref_sort_label">Sort type</string>
    <string name="pref_sort_popular_value" translatable="false">popular</string>
    <string name="pref_sort_topRated_value" translatable="false">top_rated</string>
    <string name="pref_sort_favorites" translatable="false">Favorites</string>
    <string name="results">results</string>
    <string name="content_authority">com.example.android.popular_movies</string>
    <string name="vote_average">vote_average</string>
    <string name="id">id</string>
    <string name="poster_path">poster_path</string>
    <string name="title">title</string>
    <string name="overview">overview</string>
    <string name="release_date">release_date</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="video_poster">Video Poster</string>
    <string name="not_connected_error">You are not currently connected to the internet</string>
    <string name="no_favorites">You have no favorite movies saved!</string>
    <string name="reconnect">Please reconnect to the internet, and swipe down to refresh!</string>
    <string name="no_reviews">no reviews</string>
    <string name="label_trailers">Trailers:</string>
    <string name="favorite">Favorite</string>
</resources>
