<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_single_movie_poster"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start"
                android:layout_marginTop="@dimen/top"
                android:contentDescription="@string/movie_poster"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/label_overview"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/pref_sort_label_overview"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/Favorite"
                app:layout_constraintTop_toBottomOf="@+id/Favorite" />

            <TextView
                android:id="@+id/tv_single_movie_description"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom"
                android:layout_marginEnd="@dimen/end"
                android:layout_marginTop="@dimen/top"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/label_overview"
                app:layout_constraintTop_toBottomOf="@+id/label_overview"
                app:layout_constraintVertical_bias="0.0"
                tools:text="description_default" />

            <TextView
                android:id="@+id/label_rating"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/pref_sort_label_rating"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/tv_single_movie_release_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_single_movie_release_date" />

            <TextView
                android:id="@+id/tv_single_movie_rating"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/end"
                android:layout_marginTop="@dimen/top"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/label_rating"
                app:layout_constraintTop_toBottomOf="@+id/label_rating"
                tools:text="rating_default" />

            <TextView
                android:id="@+id/label_title"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/start"
                android:layout_marginTop="@dimen/top"
                android:text="@string/pref_sort_label_title"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toEndOf="@+id/iv_single_movie_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_single_movie_title"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/end"
                android:layout_marginTop="@dimen/top"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/label_title"
                app:layout_constraintTop_toBottomOf="@+id/label_title"
                tools:text="title_default" />

            <TextView
                android:id="@+id/label_release_date"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/pref_sort_label_release_date"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/tv_single_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_single_movie_title" />

            <TextView
                android:id="@+id/tv_single_movie_release_date"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/end"
                android:layout_marginTop="@dimen/top"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/label_release_date"
                app:layout_constraintTop_toBottomOf="@+id/label_release_date"
                tools:text="release_default" />

            <TextView
                android:id="@+id/label_trailers"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/label_trailers"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/tv_single_movie_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_single_movie_description" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/v_recyclerview"
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/end"
                android:layout_marginTop="@dimen/top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/label_trailers"
                app:layout_constraintTop_toBottomOf="@+id/label_trailers" />

            <CheckBox
                android:id="@+id/Favorite"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:buttonTint="@color/colorAccent"
                android:text="@string/favorite"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="@+id/iv_single_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/iv_single_movie_poster" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>